# agv-pedestrian-dynamic-avoidance

./: README.md
tjark_nav/: CMakeLists.txt  README.md  package.xml
tjark_nav/config/: amcl.yaml  costmap_common.yaml  dwa_local_planner.yaml  global_costmap.yaml  local_costmap.yaml  move_base.yaml
tjark_nav/launch/: demo.launch  mapping.launch  navigation.launch  spawn_world.launch
tjark_nav/maps/: cafe_map.pgm  cafe_map.yaml  generate_cafe_map.py  generate_map.py  map.pgm  map.yaml
tjark_nav/rviz/: mapping.rviz  navigation.rviz
tjark_nav/scripts/: marker_detector.py  navigation_demo.py  odom_tf_broadcaster.py  pedestrian_controller.py  waypoint_saver.py
tjark_nav/worlds/: cafe_world.world  obstacle_avoidance.world
